--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tweets Searcher</title>
-	<link rel="stylesheet" href="css/demo.css" type="text/css" /> 
+	<link rel="stylesheet" href="/static/css/demo.css" type="text/css" /> 
 
 </head>
 <body>
@@ -12,11 +12,11 @@
 			<div id="searchbar">
 				 
 				<div id="create-search">
-					<h1><img src="img/cooltext758758511.gif" width="60%" height="150%"/></h1>
+					<h1><img src="/static/img/cooltext758758511.gif" width="60%" height="150%"/></h1>
 					<div id="searchform">
 						<input id="search-query" type="text" />
 						<button id="submit-search">SEARCH</button>
-						<img class="loading-icon" src="img/21.gif" alt="loading" />
+						<img class="loading-icon" src="/static/img/21.gif" alt="loading" />
 					</div>
 				</div>
 			</div>
@@ -31,11 +31,11 @@
 		</div>
 	</div>
 	
-    <script src="lib/jquery.js"></script>
-    <script src="lib/underscore.js"></script>
-    <script src="lib/backbone.js"></script>
-    <script src="lib/mustache.js"></script>
-    <script src="app.js"></script>
+    <script src="/static/lib/jquery.js"></script>
+    <script src="/static/lib/underscore.js"></script>
+    <script src="/static/lib/backbone.js"></script>
+    <script src="/static/lib/mustache.js"></script>
+    <script src="/static/app.js"></script>
     
     
     
