--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<background> <img src="img/panda.gif"/ width ="60%" height="100%"><background/>
+<background> <img src="/static/img/panda.gif"/ width ="60%" height="100%"><background/>
 	<div id="twitterSearchApp">
 		<div id="mainColumn">
 			<div id="searchbar">
